# apex

./: .gitignore  Cargo.toml  README.md  demo.mov
.claude/: settings.json
crates/apex-common/: Cargo.toml
crates/apex-common/src/: lib.rs  protocol.rs  widget_id.rs
crates/apex-mcp/: Cargo.toml
crates/apex-mcp/src/: ipc.rs  main.rs  tmux.rs
crates/apex-mcp/src/tools/: close.rs  mod.rs  query.rs  spawn.rs  update.rs
crates/apex-tui/: Cargo.toml
crates/apex-tui/src/: app.rs  event.rs  ipc_server.rs  main.rs  theme.rs
crates/apex-tui/src/widgets/: calculator.rs  clipboard_history.rs  disk_usage.rs  file_browser.rs  git_dashboard.rs  image_viewer.rs  mod.rs  project_overview.rs  system_monitor.rs  timer.rs  todo_list.rs  weather.rs
