[workspace]
resolver = "2"
members = [
    "crates/apex-common",
    "crates/apex-mcp",
    "crates/apex-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
