[package]
name = "apex-tui"
version.workspace = true
edition.workspace = true

[dependencies]
apex-common = { path = "../apex-common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
git2 = "0.20"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
image = "0.25"
